Fix note text color
Notes were previously white on white and invisible as a result.

--- a/app/javascript/src/styles/specific/notes.scss
+++ b/app/javascript/src/styles/specific/notes.scss
@@ -8,6 +8,7 @@ div#note-container {
     position: absolute;
     border: 1px solid black;
     background: #FFE;
+    color: $inverted_text_color;
     min-width: 140px;
     min-height: 1em;
     line-height: normal;
